# 5_Achse_Maschine

6-dof-arm-pick-and-place/: CMakeLists.txt  package.xml
6-dof-arm-pick-and-place/urdf/: urdf_arm.urdf
dummy_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dummy_robot_moveit_config/action/: ExecuteDesiredPose.action
dummy_robot_moveit_config/config/: constraints.yaml  fake_controllers.yaml  joint_limits.yaml  manipulator.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
dummy_robot_moveit_config/dumper/: gravieren_test.txt  hallo_world_gravieren.txt
dummy_robot_moveit_config/gcodes/: hello_world_test_27_04_22.txt
dummy_robot_moveit_config/launch/: app.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gui.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sim.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
dummy_robot_moveit_config/pyqt/: DoldGuiRoboter.ui  DoldGuiRoboterV2.ui
dummy_robot_moveit_config/scripts/: cls_ros_ser_com.py  display_points.py  dold_gui_10.py  dold_gui_4.py  dold_gui_5.py  dold_gui_6.py  dold_gui_7.py  dold_gui_8.py  dold_gui_9.py  execute_pose_goal.py  get_joints.py  pilz_commander_planning.py  save_gcode.py
dummy_robot_moveit_config/srv/: CalculateJoints.srv
project_praktikum/: CMakeLists.txt  package.xml
project_praktikum/launch/: rviz_robotron.launch
project_praktikum/robot_description/collision/: Simplified_Drehachse_C_Final.STL  Simplified_Grundgestell.STL
project_praktikum_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
project_praktikum_moveit_config/action/: ExecuteDesiredPose.action  SerialCommunication.action
project_praktikum_moveit_config/config/: fake_controllers.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robotron.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
project_praktikum_moveit_config/demo/: 45_pitch_turn.txt  cool_interpolation.txt  holes_kugel.txt  runde_laufe.txt  walzfrasen.txt
project_praktikum_moveit_config/guis/: gui_nav.kv  ros_gui.kv
project_praktikum_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  dold_app.launch  dold_gui.launch  execute_toolpath.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gui.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sim.launch  simple_moveit_controller_manager.launch.xml
project_praktikum_moveit_config/pyqt/: DoldGui.ui
project_praktikum_moveit_config/scripts/: 5d_samples.txt  AC_halbkugel_dumper.txt  bash.sh  bash.sh.save  cartesian_path.py  cls_ros_ser_com.py  data_exchange.py  dold_gui_2.py  dold_gui_3.py  dold_gui_4.py  execute_cartesian_goal.py  execute_circle.py  execute_pose_goal.py  execute_rectangle.py  execute_rombo.py  execute_rotation.py  halbkugel_dumper.txt  homing.py  homing_joints.py  joint_space_planning.py  kugel_sample.txt  listener_send_command.py  nav_gui.py  onLinear5DTest.txt  onLinearTest.txt  print_hello.py  read_file.py  rep_send_command.py  ros_ser_com.py  sample_path.txt  save_gcode.py  send_command.py  ser_com.py  serviceTest.py  set_joints.py  set_z_offset.py  simpleActionClient.py  simple_gui.py  test_path_constraints.py  testfile.txt  (+1 more)
project_praktikum_moveit_config/srv/: CalculateJoints.srv  SendCommand.srv
(+5 files in other folders)
